--- a/src/Smartiks.Framework.Hosting.Web/Smartiks.Framework.Hosting.Web.csproj
+++ b/src/Smartiks.Framework.Hosting.Web/Smartiks.Framework.Hosting.Web.csproj
@@ -10,6 +10,7 @@
     <Description>Smartiks.Framework.Hosting.Web</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
