--- a/src/Smartiks.Framework.Identity.Authentication.Web.Abstractions/Smartiks.Framework.Identity.Authentication.Web.Abstractions.csproj
+++ b/src/Smartiks.Framework.Identity.Authentication.Web.Abstractions/Smartiks.Framework.Identity.Authentication.Web.Abstractions.csproj
@@ -1,14 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Murat Atay</Authors>
     <Company>Smartiks</Company>
     <Description>Smartiks.Framework.Identity.Authentication.Web.Abstractions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>1.1.0</Version>
+    <Version>3.0.0</Version>
+    <AssemblyVersion>3.0.0.0</AssemblyVersion>
+    <FileVersion>3.0.0.0</FileVersion>
   </PropertyGroup>
 
 </Project>
