--- a/src/Smartiks.Framework.Data.EntityFramework/Smartiks.Framework.Data.EntityFramework.csproj
+++ b/src/Smartiks.Framework.Data.EntityFramework/Smartiks.Framework.Data.EntityFramework.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="Mapster" Version="5.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.3" />
   </ItemGroup>
