--- a/src/Smartiks.Framework.Identity.Data/Smartiks.Framework.Identity.Data.csproj
+++ b/src/Smartiks.Framework.Identity.Data/Smartiks.Framework.Identity.Data.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4.EntityFramework.Storage" Version="2.5.4" />
+    <PackageReference Include="IdentityServer4.EntityFramework.Storage" Version="4.0.0-preview.3.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
   </ItemGroup>
 
