--- a/src/Smartiks.Framework.Identity.Server.Extensions/Smartiks.Framework.Identity.Server.Extensions.csproj
+++ b/src/Smartiks.Framework.Identity.Server.Extensions/Smartiks.Framework.Identity.Server.Extensions.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Murat Atay;Mehmet Yasin Akar</Authors>
     <Company>Smartiks</Company>
@@ -13,8 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.5.4" />
-    <PackageReference Include="IdentityServer4.EntityFramework" Version="2.5.4" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.0.0-preview.3.17" />
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="4.0.0-preview.3.17" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
   </ItemGroup>
 
