--- a/src/Smartiks.Framework.Identity.Server.Extensions/Smartiks.Framework.Identity.Server.Extensions.csproj
+++ b/src/Smartiks.Framework.Identity.Server.Extensions/Smartiks.Framework.Identity.Server.Extensions.csproj
@@ -9,12 +9,15 @@
     <Description>Smartiks.Framework.Identity.Server.Extensions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Version>3.0.0</Version>
+    <Version>3.0.0-preview</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.0.0-preview.3.17" />
-    <PackageReference Include="IdentityServer4.EntityFramework" Version="4.0.0-preview.3.17" />
+    <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.0.0-preview.3.23" />
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="4.0.0-preview.3.23" />
+    <PackageReference Include="IdentityServer4.EntityFramework.Storage" Version="4.0.0-preview.3.23" />
+    <PackageReference Include="IdentityServer4.Storage" Version="4.0.0-preview.3.23" />
+    <PackageReference Include="IdentityServer4" Version="4.0.0-preview.3.23" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
   </ItemGroup>
 
