--- a/examples/Smartiks.Framework.TaskScheduler.Client.Web.App/Smartiks.Framework.TaskScheduler.Client.Web.App.csproj
+++ b/examples/Smartiks.Framework.TaskScheduler.Client.Web.App/Smartiks.Framework.TaskScheduler.Client.Web.App.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Smartiks.Framework.Hangfire.Server.Extensions\Smartiks.Framework.TaskScheduler.Server.Extensions.csproj" />
+    <ProjectReference Include="..\..\src\Smartiks.Framework.TaskScheduler.Server.Extensions\Smartiks.Framework.TaskScheduler.Server.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
