--- a/src/Smartiks.Framework.TaskScheduler.Server.Extensions/Smartiks.Framework.TaskScheduler.Server.Extensions.csproj
+++ b/src/Smartiks.Framework.TaskScheduler.Server.Extensions/Smartiks.Framework.TaskScheduler.Server.Extensions.csproj
@@ -9,6 +9,7 @@
     <Description>Smartiks.Framework.TaskScheduler.Server.Extensions</Description>
     <PackageProjectUrl>https://github.com/smartikscomtr/smartiks-framework</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Version>3.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
