--- a/src/Smartiks.Framework.IO/Smartiks.Framework.IO.csproj
+++ b/src/Smartiks.Framework.IO/Smartiks.Framework.IO.csproj
@@ -13,4 +13,8 @@
     <Version>3.0.0</Version>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Smartiks.Framework.IO.Abstractions\Smartiks.Framework.IO.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
